<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.yoyo.linearlayout2.MainActivity">

    <TextView
        android:text="@string/cabecera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView2"
        tools:text="Carrito de la Compra"
        android:fontFamily="monospace"
        android:textStyle="normal|bold"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">

            <TextView
                android:text="@string/product1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:layout_weight="1"
                tools:text="Producto 1"
                tools:ignore="InefficientWeight" />

            <EditText
                android:layout_width="63dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/edProducto1"
                android:layout_marginLeft="30dp"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:text="@string/unidades"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:textAlignment="textEnd"
                android:textSize="12sp"
                android:paddingLeft="2dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">

            <TextView
                android:text="@string/product2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                android:layout_weight="1"
                tools:text="producto 2" />

            <EditText
                android:layout_width="63dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/edProducto2"
                android:layout_marginLeft="30dp"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:text="@string/unidades"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:textAlignment="textEnd"
                android:textSize="12sp"
                android:paddingLeft="2dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">

            <TextView
                android:text="@string/product3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                android:layout_weight="2.17"
                tools:text="Producto 3" />

            <EditText
                android:layout_width="62dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/edProducto3"
                android:layout_marginLeft="30dp"
                tools:ignore="RtlHardcoded"
                android:layout_weight="0.01" />

            <TextView
                android:text="@string/unidades"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:textAlignment="textEnd"
                android:textSize="12sp"
                android:paddingLeft="2dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:ignore="InefficientWeight"
            android:layout_margin="10dp">

            <Button
                android:text="@string/ButtonSend"
                android:layout_width="373dp"
                android:layout_height="wrap_content"
                android:id="@+id/ButtonSend"
                tools:ignore="NestedWeights" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">

            <TextView
                android:text="@string/importe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView11"
                android:layout_weight="1" />

            <TextView
                android:text="@string/zero€"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvImporte"
                android:layout_weight="1"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">

            <TextView
                android:text="@string/iva"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView13"
                android:layout_weight="1" />

            <TextView
                android:text="@string/zero€"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvIva"
                android:layout_weight="1"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">

            <TextView
                android:text="@string/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView15"
                android:layout_weight="1" />

            <TextView
                android:text="@string/zero€"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvTotal"
                android:layout_weight="1"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <Button
                android:text="@string/ButtonVolver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ButtonVolver"
                android:layout_weight="1.41"
                tools:ignore="ButtonStyle" />

            <Button
                android:text="@string/ButtonConfirmar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ButtonConfirmar"
                android:layout_weight="1.12"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
